Fix canvas bottom white line gap; small improvements

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -22,7 +22,7 @@ body {
     width: 100%;
 }
 
-.tests {
+.tests-side {
     margin: 10px;
     width: 50%;
 }
@@ -34,13 +34,14 @@ div.canvas {
     height: 90%;
     background-color: white;
     border: inset 4px brown;
-    border-radius: 4px;
+    border-radius: 8px;
     box-shadow: rgba(64, 64, 64, 0.5) 12px 8px 40px;
 }
 
 canvas {
     width: 100%;
     height: 70vh;
+    display: block;
 }
 
 .tree.content {
